# demoProject

./: Makefile  pyproject.toml
scripts/: install_hooks.sh
